--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,6 +22,7 @@
 <script src="/js/formDepoimentos.js"></script>
 <script src="/js/formFinancas.js"></script>
 <script src="/js/formCadFinancas.js"></script>
+<script src="/js/FormMensalidade.js"></script>
 
 <script src="/js/messages_pt_BR.js"></script>
 
