--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -67,7 +67,7 @@
                     </div>
                     
                     <div class="input-field">
-                        <button class="btn waves-effect waves-light right submit" type="submit" name="action"
+                        <button class="btn waves-effect waves-light right submit" type="submit" 
                             id="btnSubmit">Cadastrar</button>
                     </div>
                 </form>
