--- a/public/css/alunos.css
+++ b/public/css/alunos.css
@@ -130,6 +130,14 @@ tr {
     cursor: pointer;
 }
 
+.dropdown-content li>a, .dropdown-content li>span {
+    font-size: 16px;
+    color: #ff7e00;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
+}
+
 @media (max-width:600px) {
     .quadrado {
         margin-bottom: 80px;
