--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -66,6 +66,11 @@
             </div>
 
             <div class="center-align" id="meta">
+                <% if(aluno.metaFeita == undefined){ %>
+                    <div class="col s12 m12 l12">
+                        <h4>Meta: <%= aluno.meta %> km </h4>
+                    </div>
+                <% } else{ %>  
                 <div class="row">
                     <div class="col s12 m6 l6">
                         <h4>Meta: <%= aluno.meta %> km </h4>
@@ -74,6 +79,7 @@
                         <h4>Meta restante: <%= aluno.metaFeita%> km</h4>
                     </div>
                 </div>
+                <% } %>
             </div>
         </div>
     </div>
