--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,6 +23,7 @@
 <script src="/js/formFinancas.js"></script>
 <script src="/js/formCadFinancas.js"></script>
 <script src="/js/FormMensalidade.js"></script>
+<script src="/js/formCadAula.js"></script>
 
 <script src="/js/messages_pt_BR.js"></script>
 
