--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -11,59 +11,62 @@
         <h1 style="text-align:center;font-weight:bold;margin:0;">Cadastrar Aluno</H1>
         <div class="row" style="text-align: center;">
             <div class="col s12 m12">
-                <form class="formValidate" id="formCad" method="POST" action="/home/cadastrarAlunos" enctype="multipart/form-data">
+                <form id="formCadastro" method="POST" action="/home/cadastrarAlunos" enctype="multipart/form-data">
                     <div class="input-field">
-                        <input type="file" id="imgUser" name="imgUser" accept="image/*" style="display: none;" data-error=".errorTxt1">
                         <img id="inseriImagem" class="responsive-img logo" src="../../img/imgUser.png" alt="High Performance">
+                    </div>
+                    <div class="input-field center-align">
+                        <input style="visibility: hidden;" type="file" id="teste" name="teste" accept="image/*" data-error=".errorTxt1">
                         <div class="errorTxt1"></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">check</i>
-                        <input name="nome" id="nome" type="text" data-error=".errorTxt1">
+                        <input name="nome" id="nome" type="text" data-error=".errorTxt2">
                         <label for="nome">Nome</label>
-                        <div class="errorTxt1 right-align "></div>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">email</i>
-                        <input name="email" id="email" type="email" data-error=".errorTxt2">
-                        <label for="email">E-mail</label>
                         <div class="errorTxt2 right-align "></div>
                     </div>
                     <div class="input-field">
-                        <i class="material-icons prefix">call</i>
-                        <input name="telefone" type="tel" id="tel" data-error=".errorTxt3">
-                        <label for="telefone">Celular</label>
+                        <i class="material-icons prefix">email</i>
+                        <input name="email" id="email" type="email" data-error=".errorTxt3">
+                        <label for="email">E-mail</label>
                         <div class="errorTxt3 right-align "></div>
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">call</i>
+                        <input name="telefone" type="tel" id="tel" data-error=".errorTxt4">
+                        <label for="telefone">Celular</label>
+                        <div class="errorTxt4 right-align "></div>
                     </div>
                     
                     <div class="input-field">
                         <i class="material-icons prefix">directions_run</i>
-                        <input name="meta" type="text" class="form-control" data-error=".errorTxt4">
+                        <input id="meta" name="meta" type="text" class="form-control" data-error=".errorTxt5">
                         <label for="meta">Meta</label>
-                        <div class="errorTxt4 right-align"></div>
+                        <div class="errorTxt5 right-align"></div>
                     </div>
 
                     <div class="input-field">
-                        <i class="material-icons prefix">format_list_bulleted</i>
-                        <select name="plano" >
+                        <select class="browser-default" id="plano" name="plano" data-error=".errorTxt6">
                             <option value="" disabled selected>Plano</option>
-                            <option value="Mensal">Mensal</option>
+                            <option value="Mensal">Recebido</option>
                             <option value="Avulso">Avulso</option>
                         </select>
-                        <div class="errorTxt4 right-align"></div>
-                    </div>
+                        <div class="input-field">
+                            <div class="errorTxt6 right-align"></div>
+                        </div>
+                    </div> 
                     
                     <div class="input-field">
                         <i class="material-icons prefix">arrow_forward</i>
-                        <input name="tempo_plano" type="number" class="form-control">
+                        <input name="tempo_plano" type="number" class="form-control"  data-error=".errorTxt7">
                         <label for="tempo_plano">Meses/Aulas</label>
-                        <div class="errorTxt4 right-align"></div>
+                        <div class="errorTxt7 right-align"></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">arrow_forward</i>
-                        <input name="valor" type="number" class="form-control">
+                        <input name="valor" type="number" class="form-control"  data-error=".errorTxt8">
                         <label for="valor">Valor</label>
-                        <div class="errorTxt4 right-align"></div>
+                        <div class="errorTxt8 right-align"></div>
                     </div>
                     
                     <div class="input-field">
