--- a/views/novaAula.ejs
+++ b/views/novaAula.ejs
@@ -1,49 +1,50 @@
 <%- include('partials/header') %>
 <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
-<link rel="stylesheet" href="/css/cadastroAlunos.css">
+<link rel="stylesheet" href="/css/cadastroAula.css">
 </head>
 <body>
 <%- include('partials/navBar') %>
 <%- include('partials/bikeGif') %> 
 
-<div class="cadastro" style="padding: 7px;">
-<h1 style="text-align:center;font-weight:bold;margin:0;">Criar nova Aula</H1>
+<div class="cadastro" style="padding: 7px; height: 100vh;">
+<h1 style="text-align:center;font-weight:bold;margin:0; margin-top: 7vh;">Criar nova Aula</H1>
 <div class="row" style="text-align: center;">
     <div class="col s12 m12">
-        <form class="formValidate" id="formCad" method="POST" action="/home/novaAula">
+        <form id="formCadAula" method="GET" action="/home/novaAula">
             <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
-                <input name="nome" id="nome" type="text">
+                <input name="nome" id="nome" type="text" data-error=".errorTxt1">
                 <label for="nome">Aula</label>
                 <div class="errorTxt1 right-align "></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">directions_run</i>
-                <input name="observacoes" id="observacoes" type="text">
+                <input name="observacoes" id="observacoes" type="text" data-error=".errorTxt2">
                 <label for="observacoes">Detalhes</label>
                 <div class="errorTxt2 right-align "></div>
             </div>
             <div class="input-field">
-                <i class="material-icons prefix">account_circle</i>
-                <select name="alunos_id">
-                  <option value="" disabled selected>Aluno </option>
-                  <% for(aluno of alunos) { %>
-                  <option value="<%= aluno.id %>"><%= aluno.nome %></option>
-                <% } %>
+                <select class="browser-default" id="alunos_id" name="alunos_id" data-error=".errorTxt3">
+                    <option value="" disabled selected>Aluno </option>
+                    <% for(aluno of alunos) { %>
+                    <option value="<%= aluno.id %>"><%= aluno.nome %></option>
+                  <% } %>
                 </select>
-
-            </div>      
+                <div class="input-field">
+                    <div class="errorTxt3 right-align"></div>
+                </div>
+            </div>     
             <div class="input-field">
                 <i class="material-icons prefix">date_range</i>
-                <input name="data_aula" type="date" class="form-control" data-error=".errorTxt4">
+                <input name="data_aula" id="data_aula" type="date" class="form-control" data-error=".errorTxt4">
                 <!-- <label for="date">Data</label> -->
                 <div class="errorTxt4 right-align"></div>
             </div>
             <div class="input-field">
                 <i class="material-icons prefix">access_time</i>
-                <input name="horario" type="time" class="form-control" data-error=".errorTxt4">
+                <input name="horario" id="horario" type="time" class="form-control" data-error=".errorTxt5">
                 <!-- <label for="horario">Horário</label> -->
-                <div class="errorTxt4 right-align"></div>
+                <div class="errorTxt5 right-align"></div>
             </div>
             <div class="input-field">
                 <button class="btn waves-effect waves-light right submit" type="submit" name="action"
