Arrumando botao grafico

--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -30,7 +30,7 @@
                 <option value="pie">Torta</option>
                 <option value="line">Linhas</option>
                 <option value="bar">Barras</option>
-                <option value="polarArea">Coordenadas polares</option>
+                <option value="polarArea">Coord. polares</option>
             </select>
           </div>
    
