--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -16,7 +16,7 @@
                         <img id="inseriImagem" class="responsive-img logo" src="../../img/imgUser.png" alt="High Performance">
                     </div>
                     <div class="input-field center-align">
-                        <input style="visibility: hidden;" type="file" id="teste" name="teste" accept="image/*" data-error=".errorTxt1">
+                        <input style="visibility: hidden;" type="file" id="imgUser" name="imgUser" accept="image/*" data-error=".errorTxt1">
                         <div class="errorTxt1"></div>
                     </div>
                     <div class="input-field">
@@ -44,29 +44,11 @@
                         <label for="meta">Meta</label>
                         <div class="errorTxt5 right-align"></div>
                     </div>
-
-                    <div class="input-field">
-                        <select class="browser-default" id="plano" name="plano" data-error=".errorTxt6">
-                            <option value="" disabled selected>Plano</option>
-                            <option value="Mensal">Recebido</option>
-                            <option value="Avulso">Avulso</option>
-                        </select>
-                        <div class="input-field">
-                            <div class="errorTxt6 right-align"></div>
-                        </div>
-                    </div> 
-                    
                     <div class="input-field">
                         <i class="material-icons prefix">arrow_forward</i>
-                        <input name="tempo_plano" type="number" class="form-control"  data-error=".errorTxt7">
-                        <label for="tempo_plano">Meses/Aulas</label>
-                        <div class="errorTxt7 right-align"></div>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">arrow_forward</i>
-                        <input name="valor" type="number" class="form-control"  data-error=".errorTxt8">
+                        <input name="valor" type="number" class="form-control"  data-error=".errorTxt6">
                         <label for="valor">Valor</label>
-                        <div class="errorTxt8 right-align"></div>
+                        <div class="errorTxt6 right-align"></div>
                     </div>
                     
                     <div class="input-field">
