Tentando ajustar Adicionar nova aula

--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -53,7 +53,7 @@
                                     <tbody>
                                         <% for (aluno of aula.dataValues.aluno) { %>
                                             <tr>
-                                            <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto José"></td>
+                                            <td><img id="foto-aluno" src="<%= aluno.dataValues.img %>" alt="Foto José"></td>
                                             <td><%= aluno.dataValues.nome %></td>
                                             <td><%= aula.dataValues.nome %></td>
                                             <td><%= aula.dataValues.horario %></td>
