começando a resolver adicionar aula

--- a/views/novaAula.ejs
+++ b/views/novaAula.ejs
@@ -27,8 +27,10 @@
                 <select class="browser-default" id="alunos_id" name="alunos_id">
                     <option value="" disabled selected>Aluno </option>
                     <% for(aluno of alunos) { %>
-                    <option value="<%= aluno.id %>"><%= aluno.nome %></option>
-                  <% } %>
+                        <% if (aluno.treinadores_id == user) { %>
+                            <option value="<%= aluno.id %>"><%= aluno.nome %></option>
+                        <% } %>
+                    <% } %>
                 </select>
                 <div class="input-field">
                     
