Arrumando adicionar aula

--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -11,7 +11,7 @@
         <h1 style="text-align:center;font-weight:bold;margin:0;">Cadastrar Aluno</H1>
         <div class="row" style="text-align: center;">
             <div class="col s12 m12">
-                <form id="formCadastro" method="POST" action="/home/cadastrarAlunos">
+                <form id="formCadastro" method="POST" action="/home/cadastrarAlunos" enctype="multipart/form-data">
                     <div class="input-field">
                         <img id="inseriImagem" class="responsive-img logo" src="../../img/imgUser.png" alt="High Performance">
                     </div>
