--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -60,7 +60,7 @@
                                             <td><%= aula.dataValues.horario %></td>
                                             <td> <i class="material-icons prefix tooltipped" data-position="bottom"
                                                     data-tooltip="Enviar SMS">contact_mail</i></td>
-                                            <td><a href="#" class="black-text">Remover aluno</a></td>
+                                            <td><a href="#" class="black-text">Remover aula</a></td>
                                         </tr>
                                         <% } %>
                                         <% } %>
