Arrumando css de finanças

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,9 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .loader.hidden {
@@ -80,7 +83,7 @@ form sapn:hover {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 40px;
-    padding-top: 15vh;
+    padding-top: 20vh;
 }
 
 .cadastro p {
