--- a/public/css/cadastroAula.css
+++ b/public/css/cadastroAula.css
@@ -12,6 +12,9 @@ body {
  width: 100%;
  height: 100%;
  background-color: white;
+ display: flex;
+justify-content: center;
+    align-items: center;
 }
 
 .loader.hidden {
