--- a/public/css/alunos.css
+++ b/public/css/alunos.css
@@ -98,6 +98,7 @@ p {
     background-size: cover;
     /* background by SVGBackgrounds.com */
     border-top: 5px solid white;
+    margin-top: 120px;
 }
 
 #footer h5 {
@@ -154,6 +155,9 @@ tr {
     }
     .quadrado img {
         display: none;
+    }
+    #footer {
+        margin-top: 40vh;
     }
    
 }
