--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -62,7 +62,7 @@
                                                     data-tooltip="Enviar SMS">contact_mail</i></td>
                                                     <td>
                                             <form id="formDelAula" action="/home/cadastrarAlunos/deletar/<%= aula.dataValues.id %>?_method=DELETE" method="POST" enctype="multipart/form-data">
-                                                <button type="submit">Remover aluno</button>
+                                                <button type="submit">Remover aula</button>
                                              </form>   
                                             </td>
                                         </tr>
