--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m6 l6">
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
-            <p class="right-align">O site High Performance é voltado para educadores físicos que desejam gerenciar dados dos seus alunos de uma maneira simples. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
+            <p class="right-align">O High Performance é voltado para educadores físicos que desejam gerenciar dados dos seus alunos de uma maneira simples. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
             </p>
             <a href="/sobre">Saber mais</a>
         </div>
