--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="/js/pwa.webmanifest">
+    <script src="/js/pwa.js"></script>
+    <script src="/js/status.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/js/sw.js')
+                .then(function() {
+                    console.log('service worker registered');
+                })
+                .catch(function() {
+                    console.log('service worker failed');
+                });
+        }
+    </script>
     
     
     
