Voltando ao commit passado

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,6 +29,8 @@
 <script src="/js/messages_pt_BR.js"></script>
 
 <script src="/js/carrousel.js"></script>
+<script src="/js/pwa.js"></script>
+<script src="/js/status.js"></script>
 
 <!-- PDF -->
 <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.65/build/pdfmake.min.js"></script>
@@ -43,7 +45,6 @@
         $('.collapsible').collapsible();
         $('select').formSelect();
     });
-
     $(document).ready(function() {
     $('input#input_text, textarea#textarea2').characterCounter();
   });
