--- a/views/partials/headIndex.ejs
+++ b/views/partials/headIndex.ejs
@@ -15,9 +15,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="apple-touch-icon" href="img/icon-192x192.png">
     <link rel=”canonical” href="https://highperformancedh.azurewebsites.net"/>
-    <link rel="manifest" href="/js/pwa.webmanifest">
-    <script src="/js/pwa.js"></script>
-    <script src="/js/status.js"></script>
+    <link rel="manifest" href="/manifest.json">
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js')
+                .then(function() {
+                    console.log('service worker registered');
+                })
+                .catch(function() {
+                    console.log('service worker failed');
+                });
+        }
+    </script>
 </head>
 
 <body>
