Arrumando page alunos

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -9,7 +9,7 @@
     <span id="nomes" style="display: none;"><%=nomes%></span>
  
     <!-- Alunos -->
-    <div style="height: 100vh;">
+    <div style="height: 100%;">
     <div class="container">
         <div class="col s12 m12 quadrado" style="margin-bottom: 0;">
             <div id="alunos"><h2>Alunos</h2></div>                                    
