--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -9,7 +9,7 @@
     <span id="nomes" style="display: none;"><%=nomes%></span>
  
     <!-- Alunos -->
-    <div style="height: 100%;">
+    <div style="height: 100vh;">
     <div class="container">
         <div class="col s12 m12 quadrado" style="margin-bottom: 0;">
             <div id="alunos"><h2>Alunos</h2></div>                                    
@@ -79,7 +79,7 @@
 
 
     
-    
+    <%- include('partials/footer') %>
     <script src="/js/linktr.js"></script>
     <script>
 let nomes = document.getElementById("nomes").textContent;
@@ -95,7 +95,6 @@ $(document).ready(function(){
     });
   });
     </script>
-    <%- include('partials/footer') %>
     <%- include('partials/rodape') %>
     
 
